# flutter_sp

./: .gitignore  README.md  pubspec.yaml
.trae/documents/: development_milestones.md  product_requirements.md  technical_architecture.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/example/flutter_sp/flutter_sp/: MainActivity.kt
ios/Classes/: FlutterSpPlugin.h  FlutterSpPlugin.m
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_service.dart  audio_visualizer.dart  main.dart  native_bridge.dart  native_bridge_real.dart  native_bridge_wrapper.dart  opengl_audio_visualizer.dart  settings_panel.dart
lib/screens/: main_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt
native/include/: audio_input.h  fft_processor.h  flutter_sp_native.h  mel_filter.h  mel_filter_bank.h  mel_spectrogram.h  texture_renderer.h
native/src/: audio_input.cpp  fft_processor.cpp  flutter_sp_native.cpp  mel_filter.cpp  mel_filter_bank.cpp  mel_spectrogram.cpp  texture_renderer.cpp
native/test/: audio_input_test.cpp  fft_processor_test.cpp  mel_filter_bank_test.cpp  mel_filter_test.cpp  mel_spectrogram_test.cpp  texture_renderer_test.cpp
test/: opengl_basic_test.dart  opengl_integration_test.dart  opengl_pipeline_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
